--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProjectManagementSystem
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
