--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,6 +65,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.3.4</version>
 				<configuration>
 					<excludes>
 						<exclude>
